[metadata]
name = msudoku
version = 0.0.1
author = MorvanZhou
author_email = morvanzhou@hotmail.com
description = python sudoku generator and solver
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MorvanZhou/sudoku
project_urls =
    Bug Tracker = https://github.com/MorvanZhou/sudoku/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =

[options.packages.find]
where = src

[options.extras_require]
build =
    tox==3.24.3
    build
    twine
    pylint
numpy =
    numpy>=1.19.5
